Scrapped most of old pom.xml
Starting from more of a baseline as there was a clear issue with the dependencies used in the old pom