@@ -8,70 +8,54 @@
      <version> 1.0.0 </version>
          
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <junit-platform.version>5.3.1</junit-platform.version>
     </properties>
 
     <dependencies>
-        <dependency>
-                 <groupId>org.junit.jupiter</groupId>
-                 <artifactId>junit.jupiter</artifactId>
-                 <version>5.7.0-M1</version>
-                 <scope>test<scope>
+       <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
-                  <groupId>org.junit.jupiter</groupId>
-                  <artifactId>junit-jupiter-engine</artifactId>
-                  <version>5.3.2</version>
-                  <scope>test</scope>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
         </dependency>
-        <dependency>
-                  <groupId>org.junit.platform</groupId>
-                  <artifactId>junit-platform-runner</artifactId>
-                  <version>1.4.0</version>
-                  <scope>test</scope>
-         </dependency>
-         <dependency>
-                  <groupId>org.junit.platform</groupId>
-                  <artifactId>junit-platform-launcher</artifactId>
-                  <version>1.4.0</version>
-                  <scope>test</scope>
-         </dependency>
     </dependencies>
 
     <build>
-        <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.0</version>
-            <configuration>
-                    <argLine>--enable-preview</argLine>
-                <includes>
-                    <include>**/Test*.java</include>
-                    <include>**/*Test.java</include>
-                    <include>**/*Tests.java</include>
-                    <include>**/*TestCase.java</include>
-                </includes>
-            </configuration>
-        </plugin>
+          <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.0</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
-                    <compilerArgs>
-                        <compilerArg>
-                            --enable-preview
-                        </compilerArg>
-                    </compilerArgs>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                    <parameters>true</parameters>
-                    <release>11</release>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
